--- a/newly-discovered-nodes/index.html
+++ b/newly-discovered-nodes/index.html
@@ -112,6 +112,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2"><a href="/free-nodes/2024-8-11-free-node-subscribe-links.htm" title="「8月11日」最高速度20.2M/S，2024年Clash/Shadowrocket/V2ray/SSR每天更新免费节点订阅链接">「8月11日」最高速度20.2M/S，2024年Clash/Shadowrocket/V2ray/SSR每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-12-free-node-subscribe.htm" title="「8月12日」最高速度21.2M/S，2024年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接">「8月12日」最高速度21.2M/S，2024年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接</a></li>
                         <li class="py-2"><a href="/free-nodes/2024-8-10-free-node-subscribe.htm" title="「8月10日」最高速度18.7M/S，2024年V2ray Node每天更新免费节点订阅链接">「8月10日」最高速度18.7M/S，2024年V2ray Node每天更新免费节点订阅链接</a></li>
                     </ul>
     </div>
@@ -124,7 +125,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">2</span> <a href="/date/2024-08/" title="2024-08 归档">2024-08</a></h4>
+                <h4><span class="badge" style="float: right;">3</span> <a href="/date/2024-08/" title="2024-08 归档">2024-08</a></h4>
             </li>
                     </ul>
     </div>
@@ -159,7 +160,7 @@
       <script src="/assets/addons/xcblog/js/frontend/v2ray_node/jquery.fancybox.min.js"></script>
       <script src="/assets/addons/xcblog/js/frontend/v2ray_node/jquery.sticky.js"></script>
       <script src="/assets/addons/xcblog/js/frontend/v2ray_node/main.js"></script>
-      <script src="/assets/addons/xcblog/js/frontend/v2ray_node/G.js"></script>
+      <script src="/assets/addons/xcblog/js/frontend/G.js"></script>
         <script>
         $(function() {
             $('.js_to').click(function() {
