--- a/free-nodes/2024-8-17-free-node-subscribe.htm
+++ b/free-nodes/2024-8-17-free-node-subscribe.htm
@@ -6,20 +6,20 @@
     <title>「8月17日」最高速度18M/S，2024年Shadowrocket/V2ray/SSR/Clash每天更新免费节点订阅链接</title>
         <meta name="keywords" content="8月17日Clash订阅链接, SSR订阅, Shadowrocket订阅链接V2ray Node免费节点官网" />
         <meta name="description" content="8月17日节点订阅更新,Shadowrocket/V2ray/SSR/Clash免费节点订阅链接,我们专注免费节点每天更新,这一次的节点更新覆盖了新加坡、日本、韩国、美国、加拿大、欧洲、香港等地区,最高速度可达18 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。" />
-        <link rel="icon" href="/assets/addons/xcblog/img/v2ray_node/favicon.ico" type="image/x-icon"/>
+        <link rel="icon" href="__ADDON__/img/v2ray_node/favicon.ico" type="image/x-icon"/>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,900" rel="stylesheet">
-    <link rel="stylesheet" href="/assets/addons/xcblog/fonts/v2ray_node/icomoon/style.css">
-    <link rel="stylesheet" href="/assets/addons/xcblog/css/v2ray_node/bootstrap.min.css">
-    <link rel="stylesheet" href="/assets/addons/xcblog/css/v2ray_node/jquery-ui.css">
-    <link rel="stylesheet" href="/assets/addons/xcblog/css/v2ray_node/owl.carousel.min.css">
-    <link rel="stylesheet" href="/assets/addons/xcblog/css/v2ray_node/owl.theme.default.min.css">
-    <link rel="stylesheet" href="/assets/addons/xcblog/css/v2ray_node/owl.theme.default.min.css">
-    <link rel="stylesheet" href="/assets/addons/xcblog/css/v2ray_node/jquery.fancybox.min.css">
-    <link rel="stylesheet" href="/assets/addons/xcblog/fonts/v2ray_node/flaticon/font/flaticon.css">
-    <link rel="stylesheet" href="/assets/addons/xcblog/css/v2ray_node/aos.css">
-    <link rel="stylesheet" href="/assets/addons/xcblog/css/v2ray_node/style.css">
+    <link rel="stylesheet" href="__ADDON__/fonts/v2ray_node/icomoon/style.css">
+    <link rel="stylesheet" href="/assets/website/css/v2ray_node/bootstrap.min.css">
+    <link rel="stylesheet" href="/assets/website/css/v2ray_node/jquery-ui.css">
+    <link rel="stylesheet" href="/assets/website/css/v2ray_node/owl.carousel.min.css">
+    <link rel="stylesheet" href="/assets/website/css/v2ray_node/owl.theme.default.min.css">
+    <link rel="stylesheet" href="/assets/website/css/v2ray_node/owl.theme.default.min.css">
+    <link rel="stylesheet" href="/assets/website/css/v2ray_node/jquery.fancybox.min.css">
+    <link rel="stylesheet" href="__ADDON__/fonts/v2ray_node/flaticon/font/flaticon.css">
+    <link rel="stylesheet" href="/assets/website/css/v2ray_node/aos.css">
+    <link rel="stylesheet" href="/assets/website/css/v2ray_node/style.css">
     
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-7H6DT73WHK"></script>
@@ -65,7 +65,7 @@
                 </div>
             </div>
         </header>
-        <div class="site-blocks-cover inner-page-cover overlay" style="background-image: url(/assets/addons/xcblog/img/v2ray_node/hero_1.jpg);" data-aos="fade" id="home-section">
+        <div class="site-blocks-cover inner-page-cover overlay" style="background-image: url(__ADDON__/img/v2ray_node/hero_1.jpg);" data-aos="fade" id="home-section">
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 mt-lg-5 mr-auto text-left align-self-end align-self-md-center">
@@ -87,6 +87,7 @@
 <p>网站注册地址：【<a href="javascript:;" class="js_to" data-url="https://user.efcloud.cc/#/register?code=" data-code="wcHPHUo2" rel="nofollow noopener"><font color="#ff0000">EFCloud（点击注册）</font></a>】</p>
 <p>&nbsp;</p><p></p><h2>订阅链接</h2><p>&nbsp;</p><p><strong>clash订阅链接</strong></p><p>https://v2ray-node.github.io/uploads/2024/08/0-20240817.yaml</p><p>https://v2ray-node.github.io/uploads/2024/08/1-20240817.yaml</p><p>https://v2ray-node.github.io/uploads/2024/08/2-20240817.yaml</p><p>https://v2ray-node.github.io/uploads/2024/08/3-20240817.yaml</p><p>https://v2ray-node.github.io/uploads/2024/08/4-20240817.yaml</p><p>&nbsp;</p><p><strong>v2ray订阅链接:</strong></p><p>https://v2ray-node.github.io/uploads/2024/08/0-20240817.txt</p><p>https://v2ray-node.github.io/uploads/2024/08/1-20240817.txt</p><p>https://v2ray-node.github.io/uploads/2024/08/2-20240817.txt</p><p>https://v2ray-node.github.io/uploads/2024/08/3-20240817.txt</p><p>https://v2ray-node.github.io/uploads/2024/08/4-20240817.txt</p><p><strong>sing-box订阅链接</strong></p><p>https://v2ray-node.github.io/uploads/2024/08/20240817.json</p><p>&nbsp;</p><p>如果您需要高质量的付费服务,我们强烈推荐您试试「<a href="javascript:;" class="js_to" data-url="https://reami.us/#/register?code=" data-code="6KO4Fpse" rel="nofollow noopener" style="color:#c00;">星辰机场</a> 」。提供全球范围内快速稳定的高速节点,轻松处理8K高清视频流量,并可解锁流媒体网站和chatGPT。其服务器性能出色,确保您享受到高品质的体验。</p>                        <div class="col-md-12 mt-5">
                                                         <p>上一个：<a href="/free-nodes/2024-8-16-free-high-speed-nodes.htm">「8月16日」最高速度20M/S，2024年SSR/Shadowrocket/V2ray/Clash每天更新免费节点订阅链接</a></p>
+                                                        <p>下一个：<a href="/free-nodes/2024-8-18-free-node-subscribe.htm">「8月18日」最高速度21.3M/S，2024年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接</a></p>
                                                     </div>
                                                 <div class="panel panel-default mt-5">
                             <div class="panel-heading">
@@ -112,14 +113,15 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2024-8-15-free-node-subscribe.htm" title="「8月15日」最高速度18M/S，2024年Shadowrocket/SSR/Clash/V2ray每天更新免费节点订阅链接">「8月15日」最高速度18M/S，2024年Shadowrocket/SSR/Clash/V2ray每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-8-17-free-node-subscribe.htm" title="「8月17日」最高速度18M/S，2024年Shadowrocket/V2ray/SSR/Clash每天更新免费节点订阅链接">「8月17日」最高速度18M/S，2024年Shadowrocket/V2ray/SSR/Clash每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-8-11-free-node-subscribe-links.htm" title="「8月11日」最高速度20.2M/S，2024年Clash/Shadowrocket/V2ray/SSR每天更新免费节点订阅链接">「8月11日」最高速度20.2M/S，2024年Clash/Shadowrocket/V2ray/SSR每天更新免费节点订阅链接</a></li>
                         <li class="py-2"><a href="/free-nodes/2024-8-10-free-node-subscribe.htm" title="「8月10日」最高速度18.7M/S，2024年V2ray Node每天更新免费节点订阅链接">「8月10日」最高速度18.7M/S，2024年V2ray Node每天更新免费节点订阅链接</a></li>
                         <li class="py-2"><a href="/free-nodes/2024-8-14-free-high-speed-nodes.htm" title="「8月14日」最高速度18M/S，2024年Shadowrocket/SSR/V2ray/Clash每天更新免费节点订阅链接">「8月14日」最高速度18M/S，2024年Shadowrocket/SSR/V2ray/Clash每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-8-16-free-high-speed-nodes.htm" title="「8月16日」最高速度20M/S，2024年SSR/Shadowrocket/V2ray/Clash每天更新免费节点订阅链接">「8月16日」最高速度20M/S，2024年SSR/Shadowrocket/V2ray/Clash每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-8-13-free-node-subscribe.htm" title="「8月13日」最高速度21.3M/S，2024年SSR/Shadowrocket/V2ray/Clash每天更新免费节点订阅链接">「8月13日」最高速度21.3M/S，2024年SSR/Shadowrocket/V2ray/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-17-free-node-subscribe.htm" title="「8月17日」最高速度18M/S，2024年Shadowrocket/V2ray/SSR/Clash每天更新免费节点订阅链接">「8月17日」最高速度18M/S，2024年Shadowrocket/V2ray/SSR/Clash每天更新免费节点订阅链接</a></li>
                         <li class="py-2"><a href="/free-nodes/2024-8-12-free-node-subscribe.htm" title="「8月12日」最高速度21.2M/S，2024年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接">「8月12日」最高速度21.2M/S，2024年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-16-free-high-speed-nodes.htm" title="「8月16日」最高速度20M/S，2024年SSR/Shadowrocket/V2ray/Clash每天更新免费节点订阅链接">「8月16日」最高速度20M/S，2024年SSR/Shadowrocket/V2ray/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-18-free-node-subscribe.htm" title="「8月18日」最高速度21.3M/S，2024年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接">「8月18日」最高速度21.3M/S，2024年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-13-free-node-subscribe.htm" title="「8月13日」最高速度21.3M/S，2024年SSR/Shadowrocket/V2ray/Clash每天更新免费节点订阅链接">「8月13日」最高速度21.3M/S，2024年SSR/Shadowrocket/V2ray/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-15-free-node-subscribe.htm" title="「8月15日」最高速度18M/S，2024年Shadowrocket/SSR/Clash/V2ray每天更新免费节点订阅链接">「8月15日」最高速度18M/S，2024年Shadowrocket/SSR/Clash/V2ray每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-11-free-node-subscribe-links.htm" title="「8月11日」最高速度20.2M/S，2024年Clash/Shadowrocket/V2ray/SSR每天更新免费节点订阅链接">「8月11日」最高速度20.2M/S，2024年Clash/Shadowrocket/V2ray/SSR每天更新免费节点订阅链接</a></li>
                     </ul>
     </div>
 </div>
@@ -131,7 +133,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">8</span> <a href="/date/2024-08/" title="2024-08 归档">2024-08</a></h4>
+                <h4><span class="badge" style="float: right;">9</span> <a href="/date/2024-08/" title="2024-08 归档">2024-08</a></h4>
             </li>
                     </ul>
     </div>
@@ -154,19 +156,19 @@
                 </div>
             </div>
         </footer>
-      <script src="/assets/addons/xcblog/js/frontend/v2ray_node/jquery-3.3.1.min.js"></script>
-      <script src="/assets/addons/xcblog/js/frontend/v2ray_node/jquery-migrate-3.0.1.min.js"></script>
-      <script src="/assets/addons/xcblog/js/frontend/v2ray_node/jquery-ui.js"></script>
-      <script src="/assets/addons/xcblog/js/frontend/v2ray_node/popper.min.js"></script>
-      <script src="/assets/addons/xcblog/js/frontend/v2ray_node/bootstrap.min.js"></script>
-      <script src="/assets/addons/xcblog/js/frontend/v2ray_node/owl.carousel.min.js"></script>
-      <script src="/assets/addons/xcblog/js/frontend/v2ray_node/jquery.stellar.min.js"></script>
-      <script src="/assets/addons/xcblog/js/frontend/v2ray_node/jquery.easing.1.3.js"></script>
-      <script src="/assets/addons/xcblog/js/frontend/v2ray_node/aos.js"></script>
-      <script src="/assets/addons/xcblog/js/frontend/v2ray_node/jquery.fancybox.min.js"></script>
-      <script src="/assets/addons/xcblog/js/frontend/v2ray_node/jquery.sticky.js"></script>
-      <script src="/assets/addons/xcblog/js/frontend/v2ray_node/main.js"></script>
-      <script src="/assets/addons/xcblog/js/frontend/G.js"></script>
+      <script src="/assets/website/js/frontend/v2ray_node/jquery-3.3.1.min.js"></script>
+      <script src="/assets/website/js/frontend/v2ray_node/jquery-migrate-3.0.1.min.js"></script>
+      <script src="/assets/website/js/frontend/v2ray_node/jquery-ui.js"></script>
+      <script src="/assets/website/js/frontend/v2ray_node/popper.min.js"></script>
+      <script src="/assets/website/js/frontend/v2ray_node/bootstrap.min.js"></script>
+      <script src="/assets/website/js/frontend/v2ray_node/owl.carousel.min.js"></script>
+      <script src="/assets/website/js/frontend/v2ray_node/jquery.stellar.min.js"></script>
+      <script src="/assets/website/js/frontend/v2ray_node/jquery.easing.1.3.js"></script>
+      <script src="/assets/website/js/frontend/v2ray_node/aos.js"></script>
+      <script src="/assets/website/js/frontend/v2ray_node/jquery.fancybox.min.js"></script>
+      <script src="/assets/website/js/frontend/v2ray_node/jquery.sticky.js"></script>
+      <script src="/assets/website/js/frontend/v2ray_node/main.js"></script>
+      <script src="/assets/website/js/frontend/G.js"></script>
     </div> <!-- .site-wrap -->
 </body>
 
