--- a/index.html
+++ b/index.html
@@ -6,20 +6,20 @@
     <title>V2ray Node | 科学上网 - 免费公益Clash/V2ray/SSR节点/小火箭订阅链接|科学上网|免费梯子</title>
         <meta name="keywords" content="V2ray Node节点分享,Clash,SSR,V2ray,Shadowrocket机场订阅" />
         <meta name="description" content="V2ray Node每天会更新免费节点，包括Clash、SSR、V2ray等类型。它会提供详细的节点信息，如速度和覆盖地区等，还附有简明教程。V2ray Node可以满足用户各种需求，为用户提供稳定可靠的免费节点，帮助用户轻松实现科学上网。" />
-        <link rel="icon" href="/assets/addons/xcblog/img/v2ray_node/favicon.ico" type="image/x-icon"/>
+        <link rel="icon" href="__ADDON__/img/v2ray_node/favicon.ico" type="image/x-icon"/>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,900" rel="stylesheet">
-    <link rel="stylesheet" href="/assets/addons/xcblog/fonts/v2ray_node/icomoon/style.css">
-    <link rel="stylesheet" href="/assets/addons/xcblog/css/v2ray_node/bootstrap.min.css">
-    <link rel="stylesheet" href="/assets/addons/xcblog/css/v2ray_node/jquery-ui.css">
-    <link rel="stylesheet" href="/assets/addons/xcblog/css/v2ray_node/owl.carousel.min.css">
-    <link rel="stylesheet" href="/assets/addons/xcblog/css/v2ray_node/owl.theme.default.min.css">
-    <link rel="stylesheet" href="/assets/addons/xcblog/css/v2ray_node/owl.theme.default.min.css">
-    <link rel="stylesheet" href="/assets/addons/xcblog/css/v2ray_node/jquery.fancybox.min.css">
-    <link rel="stylesheet" href="/assets/addons/xcblog/fonts/v2ray_node/flaticon/font/flaticon.css">
-    <link rel="stylesheet" href="/assets/addons/xcblog/css/v2ray_node/aos.css">
-    <link rel="stylesheet" href="/assets/addons/xcblog/css/v2ray_node/style.css">
+    <link rel="stylesheet" href="__ADDON__/fonts/v2ray_node/icomoon/style.css">
+    <link rel="stylesheet" href="/assets/website/css/v2ray_node/bootstrap.min.css">
+    <link rel="stylesheet" href="/assets/website/css/v2ray_node/jquery-ui.css">
+    <link rel="stylesheet" href="/assets/website/css/v2ray_node/owl.carousel.min.css">
+    <link rel="stylesheet" href="/assets/website/css/v2ray_node/owl.theme.default.min.css">
+    <link rel="stylesheet" href="/assets/website/css/v2ray_node/owl.theme.default.min.css">
+    <link rel="stylesheet" href="/assets/website/css/v2ray_node/jquery.fancybox.min.css">
+    <link rel="stylesheet" href="__ADDON__/fonts/v2ray_node/flaticon/font/flaticon.css">
+    <link rel="stylesheet" href="/assets/website/css/v2ray_node/aos.css">
+    <link rel="stylesheet" href="/assets/website/css/v2ray_node/style.css">
     
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-7H6DT73WHK"></script>
@@ -65,7 +65,7 @@
                 </div>
             </div>
         </header>
-        <div class="site-blocks-cover overlay" style="background-image: url(/assets/addons/xcblog/img/v2ray_node/hero_1.jpg);" data-aos="fade" id="home-section">
+        <div class="site-blocks-cover overlay" style="background-image: url(__ADDON__/img/v2ray_node/hero_1.jpg);" data-aos="fade" id="home-section">
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 mt-lg-5 ml-auto text-left align-self-end align-self-md-center">
@@ -81,6 +81,19 @@
                     <div class="col-md-9">
                         <h2>最近更新文章</h2>
                         <div class="xcblog-blog-list">
+                                                        <div class="row item xcblog-blog-item" data-date="2024-08-18">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2024-8-18-free-node-subscribe.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/37002d76718f469b4a4e2c3ae6e5a20a.webp" alt="「8月18日」最高速度21.3M/S，2024年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2024-8-18-free-node-subscribe.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">「8月18日」最高速度21.3M/S，2024年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接</h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了欧洲、美国、韩国、加拿大、香港、日本、新加坡等地区,最高速度可达21.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
                                                         <div class="row item xcblog-blog-item" data-date="2024-08-17">
                                 <div class="col-md-3">
                                     <a href="/free-nodes/2024-8-17-free-node-subscribe.htm" class="xcblog-blog-url">
@@ -194,13 +207,14 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2024-8-17-free-node-subscribe.htm" title="「8月17日」最高速度18M/S，2024年Shadowrocket/V2ray/SSR/Clash每天更新免费节点订阅链接">「8月17日」最高速度18M/S，2024年Shadowrocket/V2ray/SSR/Clash每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-8-14-free-high-speed-nodes.htm" title="「8月14日」最高速度18M/S，2024年Shadowrocket/SSR/V2ray/Clash每天更新免费节点订阅链接">「8月14日」最高速度18M/S，2024年Shadowrocket/SSR/V2ray/Clash每天更新免费节点订阅链接</a></li>
                         <li class="py-2"><a href="/free-nodes/2024-8-16-free-high-speed-nodes.htm" title="「8月16日」最高速度20M/S，2024年SSR/Shadowrocket/V2ray/Clash每天更新免费节点订阅链接">「8月16日」最高速度20M/S，2024年SSR/Shadowrocket/V2ray/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-11-free-node-subscribe-links.htm" title="「8月11日」最高速度20.2M/S，2024年Clash/Shadowrocket/V2ray/SSR每天更新免费节点订阅链接">「8月11日」最高速度20.2M/S，2024年Clash/Shadowrocket/V2ray/SSR每天更新免费节点订阅链接</a></li>
                         <li class="py-2"><a href="/free-nodes/2024-8-10-free-node-subscribe.htm" title="「8月10日」最高速度18.7M/S，2024年V2ray Node每天更新免费节点订阅链接">「8月10日」最高速度18.7M/S，2024年V2ray Node每天更新免费节点订阅链接</a></li>
                         <li class="py-2"><a href="/free-nodes/2024-8-12-free-node-subscribe.htm" title="「8月12日」最高速度21.2M/S，2024年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接">「8月12日」最高速度21.2M/S，2024年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-17-free-node-subscribe.htm" title="「8月17日」最高速度18M/S，2024年Shadowrocket/V2ray/SSR/Clash每天更新免费节点订阅链接">「8月17日」最高速度18M/S，2024年Shadowrocket/V2ray/SSR/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-14-free-high-speed-nodes.htm" title="「8月14日」最高速度18M/S，2024年Shadowrocket/SSR/V2ray/Clash每天更新免费节点订阅链接">「8月14日」最高速度18M/S，2024年Shadowrocket/SSR/V2ray/Clash每天更新免费节点订阅链接</a></li>
                         <li class="py-2"><a href="/free-nodes/2024-8-13-free-node-subscribe.htm" title="「8月13日」最高速度21.3M/S，2024年SSR/Shadowrocket/V2ray/Clash每天更新免费节点订阅链接">「8月13日」最高速度21.3M/S，2024年SSR/Shadowrocket/V2ray/Clash每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-8-11-free-node-subscribe-links.htm" title="「8月11日」最高速度20.2M/S，2024年Clash/Shadowrocket/V2ray/SSR每天更新免费节点订阅链接">「8月11日」最高速度20.2M/S，2024年Clash/Shadowrocket/V2ray/SSR每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-18-free-node-subscribe.htm" title="「8月18日」最高速度21.3M/S，2024年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接">「8月18日」最高速度21.3M/S，2024年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接</a></li>
                         <li class="py-2"><a href="/free-nodes/2024-8-15-free-node-subscribe.htm" title="「8月15日」最高速度18M/S，2024年Shadowrocket/SSR/Clash/V2ray每天更新免费节点订阅链接">「8月15日」最高速度18M/S，2024年Shadowrocket/SSR/Clash/V2ray每天更新免费节点订阅链接</a></li>
                     </ul>
     </div>
@@ -213,7 +227,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">8</span> <a href="/date/2024-08/" title="2024-08 归档">2024-08</a></h4>
+                <h4><span class="badge" style="float: right;">9</span> <a href="/date/2024-08/" title="2024-08 归档">2024-08</a></h4>
             </li>
                     </ul>
     </div>
@@ -236,19 +250,19 @@
                 </div>
             </div>
         </footer>
-      <script src="/assets/addons/xcblog/js/frontend/v2ray_node/jquery-3.3.1.min.js"></script>
-      <script src="/assets/addons/xcblog/js/frontend/v2ray_node/jquery-migrate-3.0.1.min.js"></script>
-      <script src="/assets/addons/xcblog/js/frontend/v2ray_node/jquery-ui.js"></script>
-      <script src="/assets/addons/xcblog/js/frontend/v2ray_node/popper.min.js"></script>
-      <script src="/assets/addons/xcblog/js/frontend/v2ray_node/bootstrap.min.js"></script>
-      <script src="/assets/addons/xcblog/js/frontend/v2ray_node/owl.carousel.min.js"></script>
-      <script src="/assets/addons/xcblog/js/frontend/v2ray_node/jquery.stellar.min.js"></script>
-      <script src="/assets/addons/xcblog/js/frontend/v2ray_node/jquery.easing.1.3.js"></script>
-      <script src="/assets/addons/xcblog/js/frontend/v2ray_node/aos.js"></script>
-      <script src="/assets/addons/xcblog/js/frontend/v2ray_node/jquery.fancybox.min.js"></script>
-      <script src="/assets/addons/xcblog/js/frontend/v2ray_node/jquery.sticky.js"></script>
-      <script src="/assets/addons/xcblog/js/frontend/v2ray_node/main.js"></script>
-      <script src="/assets/addons/xcblog/js/frontend/G.js"></script>
+      <script src="/assets/website/js/frontend/v2ray_node/jquery-3.3.1.min.js"></script>
+      <script src="/assets/website/js/frontend/v2ray_node/jquery-migrate-3.0.1.min.js"></script>
+      <script src="/assets/website/js/frontend/v2ray_node/jquery-ui.js"></script>
+      <script src="/assets/website/js/frontend/v2ray_node/popper.min.js"></script>
+      <script src="/assets/website/js/frontend/v2ray_node/bootstrap.min.js"></script>
+      <script src="/assets/website/js/frontend/v2ray_node/owl.carousel.min.js"></script>
+      <script src="/assets/website/js/frontend/v2ray_node/jquery.stellar.min.js"></script>
+      <script src="/assets/website/js/frontend/v2ray_node/jquery.easing.1.3.js"></script>
+      <script src="/assets/website/js/frontend/v2ray_node/aos.js"></script>
+      <script src="/assets/website/js/frontend/v2ray_node/jquery.fancybox.min.js"></script>
+      <script src="/assets/website/js/frontend/v2ray_node/jquery.sticky.js"></script>
+      <script src="/assets/website/js/frontend/v2ray_node/main.js"></script>
+      <script src="/assets/website/js/frontend/G.js"></script>
     </div> <!-- .site-wrap -->
 </body>
 
